Fix dark square behind rounded avatar, Fixes #131

--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -1410,6 +1410,7 @@ body.embed .activity-stream .entry,
 .layout-single-column .column-inline-form,
 .layout-single-column .scrollable .account-card,
 .layout-single-column .scrollable .account-card__title__avatar .account__avatar,
+.account__avatar,
 .layout-single-column .scrollable .account-card__title__avatar img,
 .layout-single-column .explore__search-header,
 .layout-single-column .empty-column-indicator,
